[package]
name = "xbus"
version = "0.1.0"
authors = ["lolynx <londevil@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
hyper = {version="=0.13.0-alpha.4", features=["unstable-stream"]}
url = "1.7"
futures-preview = { version="=0.3.0-alpha.19", features=["compat", "async-await"]}
tokio = "=0.2.0-alpha.6"
tokio-io = "=0.2.0-alpha.6"
log = "0.4"
http = "0.1"
percent-encoding = "2.1"
tokio-rustls = "=0.12.0-alpha.4"
webpki = "*"
webpki-roots = "*"
ring = "*"
untrusted = "*"

[dependencies.rustls]
version = "*"
features = ["dangerous_configuration"]

[dev-dependencies]
env_logger = "0.7"
clap = "2.33"
