[package]
name = "xbus"
version = "0.1.0"
authors = ["lolynx <londevil@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
hyper = "0.13"
url = "1.7"
futures = { version="0.3", features=["compat", "async-await"]}
tokio = {version="0.2", features=["stream", "macros"]}
log = "0.4"
http = "*"
percent-encoding = "2.1"
tokio-rustls = "0.13"
webpki = "*"
webpki-roots = "*"
ring = "*"
untrusted = "*"
bytes = "*"

[dependencies.rustls]
version = "*"
features = ["dangerous_configuration"]

[dev-dependencies]
env_logger = "0.7"
clap = "2.33"
